--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "bcryptjs": "^2.4.0",
-    "igo": "2.1.1"
+    "igo": "^2.1.2"
   },
   "devDependencies": {
     "express-session": "^1.14.2",
